# RoFI

./: .gitignore  setup.sh
.doctrees/: environment.pickle
.github/workflows/: build.yml
branch/ble-controller/: genindex.html  objects.inv  searchindex.js
branch/ble-controller/rofilib/atoms/: result.html
branch/rofiEsp32/: genindex.html  objects.inv  searchindex.js
branch/rofiEsp32/rofihal/: index.html
examples/hal/espNvs/: CMakeLists.txt  main.cpp  readme.md
examples/hal/firmwareUpdater/: CMakeLists.txt
examples/hal/rofi-nimble/: CMakeLists.txt  main.cpp
examples/hal/servo/: main.cpp
examples/hal/setId/: CMakeLists.txt  main.cpp  readme.md
examples/hal/wifi/: CMakeLists.txt  main.cpp
examples/hal/wifiController/: CMakeLists.txt  main.cpp  readme.md
examples/hal/wifiControllerConsole/: CMakeLists.txt  main.cpp  readme.md
hardwareModules/universalModule/software/esp32/esp_hello_world/: CMakeLists.txt
hardwareModules/universalModule/software/esp32/jaculus/: CMakeLists.txt  main.cpp
hardwareModules/universalModule/software/esp32/nimble-c-basic/: main.c  readme.md
hardwareModules/universalModule/software/esp32/nimbleCppDemo/: .gitignore
hardwareModules/universalModule/software/esp32/nimbleCppDemo/nimbleEspidf-server/: README.md  sdkconfig
hardwareModules/universalModule/software/esp32/nimbleCppDemo/nimbleEspidf-server/main/: BLEConnector.cpp  BLEConnector.h  CMakeLists.txt  idf_component.yml  main.cpp
hardwareModules/universalModule/software/esp32/nimbleCppDemo/nimbleEspidfBasic/: CMakeLists.txt  XoldCMakeLists.txt  main.cpp
hardwareModules/universalModule/software/esp32/nimbleCppDemo/nimblePython-client/: bt_gui.py  bt_gui.ui  bt_gui_old.py  bt_qui.qml
hardwareModules/universalModule/software/esp32/nimbleCppNew/: CMakeLists.txt  main.cpp
hardwareModules/universalModule/software/esp32/nimbleDemo/: CMakeLists.txt
releng/cmake/: ESP32.cmake
releng/tools/: _idf_monitor.py  menuconfig-esp32  rconnector  rflash  rmonitor
softwareComponents/lwip++/include/: networking.hpp
softwareComponents/nimBleConnector/: CMakeLists.txt  readme.md
softwareComponents/nimBleConnector/python/: Makefile  cli.py  connector.py  requirements.txt
softwareComponents/nimBleConnector/python/protoc/: rofi.py  rofi_pb2.py
softwareComponents/nimBleProtocol/: readme.md  rofi.proto
softwareComponents/nimBleRofi/: CMakeLists.txt  Makefile  readme.md  requirements.txt
softwareComponents/nimBleRofi/src/: nimBleCharact.cpp  nimBleCharact.hpp  nimBleCodec.cpp  nimBleCodec.hpp  nimBleRofi.cpp  nimBleRofi.hpp
softwareComponents/nimBleRofi/src/protoc/: rofi.pb.c  rofi.pb.h
softwareComponents/rofiEsp32/: CMakeLists.txt  readme.md
softwareComponents/rofiEsp32/src/net/: socket.hpp  wifi.cpp  wifi.hpp  wifiController.cpp  wifiController.hpp
softwareComponents/rofiEsp32/src/nvs/: nvs.cpp  nvs.hpp
softwareComponents/rofiEsp32/src/util/: delay.hpp  readLine.hpp
softwareComponents/rofiHalEsp32/: CMakeLists.txt
softwareComponents/rofiHalEsp32/src/: rofi_hal.cpp
softwareComponents/rofiHalEsp32/src/espDriver/: spi.hpp
softwareComponents/rofiHalInc/include/: rofi_hal.hpp
softwareComponents/rofiHalJaculus/: CMakeLists.txt
softwareComponents/rofiHalJaculus/espFeatures/: timestampFeature.h
softwareComponents/rofiHalJaculus/resources/: CMakeLists.txt  resources.h
softwareComponents/rofiHalSim/: rofi_hal.cpp
softwareComponents/rofiHalSimPy/: hal.cpp
suites/esp32/: CMakeLists.txt  sdkconfig
util/: multiUpload.py
